@@ -626,6 +626,118 @@ struct op_event const op_events[] = {
   { CTR_ALL, OP_K7_K8, 0xcf, &um_empty, "HARDWARE_INTERRUPTS", 
     "Number of taken hardware interrupts", 10,},
 
+  /* K8 events */
+  { CTR_ALL, OP_HAMMER, 0x00, &um_moesi, "DISPATCHED_FPU_OPS",
+    "Dispatched FPU ops", 500,}, 
+  { CTR_ALL, OP_HAMMER, 0x01, &um_empty, "NO_FPU_OPS",
+    "Cycles with no FPU ops retured", 500,},
+  { CTR_ALL, OP_HAMMER, 0x02, &um_empty, "FAST_FPU_OPS",
+    "Dispatched FPU ops that use the fast flag interface", 500, },
+  { CTR_ALL, OP_HAMMER, 0x20, &um_moesi, "SEG_REG_LOAD",
+    "Segment register load", 500,},
+  { CTR_ALL, OP_HAMMER, 0x21, &um_empty, "SELF_MODIFY_RESNYC",
+    "Microarchitectural resync caused by self modifying code", 500,},
+  { CTR_ALL, OP_HAMMER, 0x22, &um_empty, "SNOOP_RESYNC",
+    "Microarchitectural resync caused by snoop", 500,},
+  { CTR_ALL, OP_HAMMER, 0x23, &um_empty, "LS_BUFFER_FULL",
+    "LS Buffer 2 Full", 500,},
+  { CTR_ALL, OP_HAMMER, 0x24, &um_empty, "LOCKED_OP",
+    "Locked operation", 500,},
+  { CTR_ALL, OP_HAMMER, 0x25, &um_empty, "OP_LATE_CANCEL",
+    "Microarchitectural late cancel of an operation", 500,},
+  { CTR_ALL, OP_HAMMER, 0x26, &um_empty, "CFLUSH_RETIRED",
+    "Retired CFLUSH instructions", 500,},
+  { CTR_ALL, OP_HAMMER, 0x27, &um_empty, "CPUID_RETIRED",
+    "Retired CPUID instructions", 500,},
+  { CTR_ALL, OP_HAMMER, 0x48, &um_empty, "ACCESS_CANCEL_LATE",
+    "Microarchitectural late cancel of an access", 500,},
+  { CTR_ALL, OP_HAMMER, 0x49, &um_empty, "ACCESS_CANCEL_EARLY",
+    "Microarchitectural early cancel of an access", 500,},
+  { CTR_ALL, OP_HAMMER, 0x4A, &um_moesi, "ECC_BIT_ERR",
+    "One bit ECC error recorded by scrubber", 500,},
+  { CTR_ALL, OP_HAMMER, 0x4B, &um_moesi, "DISPATCHED_PRE_INSTRS",
+    "Dispatched prefetch instructions", 500,},
+  { CTR_ALL, OP_HAMMER, 0x7D, &um_moesi, "BU_INT_L2_REQ",
+    "Internal L2 request", 500,},
+  { CTR_ALL, OP_HAMMER, 0x7E, &um_moesi, "BU_FILL_REQ",
+    "Fill request that missed in L2", 500,},
+  { CTR_ALL, OP_HAMMER, 0x7F, &um_moesi, "BU_FILL_L2",
+    "Fill into L2", 500,},
+  { CTR_ALL, OP_HAMMER, 0x82, &um_empty, "IC_REFILL_FROM_L2",
+    "Refill from L2", 500,},
+  { CTR_ALL, OP_HAMMER, 0x83, &um_empty, "IC_REFILL_FROM_SYS",
+    "Refill from system", 500,},
+  { CTR_ALL, OP_HAMMER, 0x86, &um_empty, "IC_RESYNC_BY_SNOOP",
+    "Microarchitectural resync caused by snoop", 500,},
+  { CTR_ALL, OP_HAMMER, 0x88, &um_empty, "IC_STACK_HIT",
+    "Return stack hit", 500,},
+  { CTR_ALL, OP_HAMMER, 0x87, &um_empty, "IC_FETCH_STALL",
+    "Instruction fetch stall", 500,},
+  { CTR_ALL, OP_HAMMER, 0x89, &um_empty, "IC_STACK_OVERFLOW",
+    "Return stack overflow", 500,},
+  { CTR_ALL, OP_HAMMER, 0xC8, &um_empty, "RETIRED_NEAR_RETURNS",
+    "Retired near returns", 500,},
+  { CTR_ALL, OP_HAMMER, 0xc9, &um_empty, "RETIRED_RETURNS_MISPREDICT",
+    "Retired near returns mispredicted", 500,},
+  { CTR_ALL, OP_HAMMER, 0xca, &um_empty, "RETIRED_BRANCH_MISCOMPARE",
+    "Returned taken branches mispredicted due to address miscompare", 500,},
+  { CTR_ALL, OP_HAMMER, 0xcb, &um_moesi, "RETIRED_FPU_INSTRS",
+    "Retired FPU instructions", 500,},
+  { CTR_ALL, OP_HAMMER, 0xcc, &um_moesi, "RETIRED_FASTPATH_INSTRS",
+    "Retired fastpath double op instructions", 500,},
+  { CTR_ALL, OP_HAMMER, 0xd0, &um_empty, "DECODER_EMPTY",
+    "Nothing to dispatch (decoder empty)", 500,},
+  { CTR_ALL, OP_HAMMER, 0xd1, &um_empty, "DISPATCH_STALLS",
+    "Dispatch stalls", 500,},
+  { CTR_ALL, OP_HAMMER, 0xd2, &um_empty, "DISPATCH_STALL_FROM_BRANCH_ABORT",
+    "Dispatch stall from branch abort to retire", 500,},
+  { CTR_ALL, OP_HAMMER, 0xd3, &um_empty, "DISPATCH_STALL_SERIALIZATION",
+    "Dispatch stall for serialization", 500,},
+  { CTR_ALL, OP_HAMMER, 0xd4, &um_empty, "DISPATCH_STALL_SEG_LOAD",
+    "Dispatch stall for segment load", 500,},
+  { CTR_ALL, OP_HAMMER, 0xd5, &um_empty, "DISPATCH_STALL_REORDER_BUFFER",
+    "Dispatch stall when reorder buffer is full", 500,},
+  { CTR_ALL, OP_HAMMER, 0xd6, &um_empty, "DISPATCH_STALL_RESERVE_STATIONS",
+    "Dispatch stall when reservation stations are full", 500,},
+  { CTR_ALL, OP_HAMMER, 0xd7, &um_empty, "DISPATCH_STALL_FPU",
+    "Dispatch stall when FPU is full", 500,},
+  { CTR_ALL, OP_HAMMER, 0xd8, &um_empty, "DISPATCH_STALL_LS",
+    "Dispatch stall when LS is full", 500,},
+  { CTR_ALL, OP_HAMMER, 0xd9, &um_empty, "DISPATCH_STALL_QUIET_WAIT",
+    "Dispatch stall when waiting for all to be quiet", 500,},
+  { CTR_ALL, OP_HAMMER, 0xda, &um_empty, "DISPATCH_STALL_PENDING",
+    "Dispatch stall when far control transfer or resync branch is pending", 500,},
+  { CTR_ALL, OP_HAMMER, 0xdb, &um_moesi, "FPU_EXCEPTIONS",
+    "FPU exceptions", 500,},
+  { CTR_ALL, OP_HAMMER, 0xdc, &um_empty, "DR0_BREAKPOINTS",
+    "Number of breakpoints for DR0", 500,},
+  { CTR_ALL, OP_HAMMER, 0xdd, &um_empty, "DR1_BREAKPOINTS",
+    "Number of breakpoints for DR1", 500,},
+  { CTR_ALL, OP_HAMMER, 0xde, &um_empty, "DR2_BREAKPOINTS",
+    "Number of breakpoints for DR2", 500,},
+  { CTR_ALL, OP_HAMMER, 0xdf, &um_empty, "DR3_BREAKPOINTS",
+    "Number of breakpoints for DR3", 500,},
+  { CTR_ALL, OP_HAMMER, 0xe0, &um_moesi, "MEM_PAGE_ACCESS",
+    "Memory controller page access", 500,},
+  { CTR_ALL, OP_HAMMER, 0xe1, &um_empty, "MEM_PAGE_TBL_OVERFLOW",
+    "Memory controller page table overlow", 500,},
+  { CTR_ALL, OP_HAMMER, 0xe2, &um_empty, "DRAM_SLOTS_MISSED",
+    "Memory controller DRAM command slots missed in MemClks", 500,},
+  { CTR_ALL, OP_HAMMER, 0xe3, &um_moesi, "MEM_TURNAROUND",
+    "Memory controller turnaround", 500,},
+  { CTR_ALL, OP_HAMMER, 0xe4, &um_moesi, "MEM_BYPASS_SAT",
+    "Memory controller bypass saturation", 500,},
+  { CTR_ALL, OP_HAMMER, 0xeb, &um_moesi, "SIZED_COMMANDS",
+    "Sized Commands", 500,},
+  { CTR_ALL, OP_HAMMER, 0xec, &um_moesi, "PROBE_RESULT",
+    "Probe Result", 500,},
+  { CTR_ALL, OP_HAMMER, 0xf6, &um_moesi, "HYPERTRANSPORT_BUS0_WIDTH",
+    "HyperTransport (tm) bus 0 bandwidth", 500,},
+  { CTR_ALL, OP_HAMMER, 0xf7, &um_moesi, "HYPERTRANSPORT_BUS1_WIDTH",
+    "HyperTransport (tm) bus 1 bandwidth", 500,},
+  { CTR_ALL, OP_HAMMER, 0xf8, &um_moesi, "HYPERTRANSPORT_BUS2_WIDTH",
+    "HyperTransport (tm) bus 2 bandwidth", 500,},
+
   /* pentium 4 events */
   { CTR_IQ_ALL,    OP_P4_ALL, 0x01, &um_branch_retired, "BRANCH_RETIRED", 
     "retired branches", 3000},
